[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Game/UI/Previews/PreviewFilter.gd" type="Script" id=1]
[ext_resource path="res://Images/SearchIcon.svg" type="Texture" id=2]
[ext_resource path="res://Scripts/Game/UI/Previews/ObjectPreviewGrid.gd" type="Script" id=3]

[node name="PreviewFilter" type="VBoxContainer"]
margin_right = 389.0
margin_bottom = 30.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 632.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="PackLabel" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 25.0
text = "Pack:"

[node name="PackButton" type="OptionButton" parent="HBoxContainer"]
margin_left = 38.0
margin_right = 188.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )

[node name="TypeLabel" type="Label" parent="HBoxContainer"]
margin_left = 192.0
margin_top = 5.0
margin_right = 229.0
margin_bottom = 25.0
text = "Type:"

[node name="TypeButton" type="OptionButton" parent="HBoxContainer"]
margin_left = 233.0
margin_right = 383.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )

[node name="Space" type="Control" parent="HBoxContainer"]
margin_left = 387.0
margin_right = 478.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="SearchEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 482.0
margin_right = 632.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
clear_button_enabled = true
right_icon = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 34.0
margin_right = 632.0
margin_bottom = 434.0
rect_min_size = Vector2( 620, 400 )
mouse_filter = 1
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 632.0
margin_bottom = 395.0
size_flags_horizontal = 3

[node name="ObjectPreviewGrid" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 632.0
margin_bottom = 395.0
script = ExtResource( 3 )
columns = 6
rows = 3

[node name="GenericPreviewGrid" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_top = 399.0
margin_right = 632.0
margin_bottom = 399.0
columns = 2

[connection signal="item_selected" from="HBoxContainer/PackButton" to="." method="_on_PackButton_item_selected"]
[connection signal="item_selected" from="HBoxContainer/TypeButton" to="." method="_on_TypeButton_item_selected"]
[connection signal="text_changed" from="HBoxContainer/SearchEdit" to="." method="_on_SearchEdit_text_changed"]
[connection signal="preview_clicked" from="ScrollContainer/VBoxContainer/ObjectPreviewGrid" to="." method="_on_ObjectPreviewGrid_preview_clicked"]
[connection signal="requesting_objects" from="ScrollContainer/VBoxContainer/ObjectPreviewGrid" to="." method="_on_ObjectPreviewGrid_requesting_objects"]
